  overhead and locking costs
* Replace mutex locks with atomics in core library
* Add optional, limited support for RDTSCP-based timing, enabled via
  --enable-rdtscp at configure time
* Remove unecessary explicit mpich binding libraries from link line when static linking
* Graceful warnings when parsing log files with unknown module types

Darshan-3.3.1
=============
* fixed github issue 399: undefined llapi_layout_get_by_xattr function in some
  scenarios because of incomplete dependency information in Darshan shared
  library
* modified Darshan to properly handle for non-MPI applications that call fork()

Darshan-3.3.0
=============
* added AutoPerf modules for tracking MPI communication usage (APMPI) and
  for tracking Cray XC performance counters (APXC)

Darshan-3.3.0-pre2
=============
* fixed bug in HDF5 module resulting in warning messages for instrumented
  datasets that use H5S_SELECT_NONE (reported by Marta Garcia Martinez)
* disabled DXT's MPI-IO offset tracing for Darshan builds using OpenMPI
  to workaround an OpenMPI bug (reported by Tobias Meisel)
* modified Darshan to query Lustre striping information for all
  instrumented files to workaround issue of retrieving striping info for
  Lustre files that are symlinked to other file systems

Darshan-3.3.0-pre1
=============
* added first version of PyDarshan, which provides interfaces for
  accessing Darshan log file data from Python applications
* modified Lustre module to use 'fgetxattr' rather than 'ioctl' for
  querying stripe info to avoid known bug in Lustre that could cause
  application crashes
* fixed bug leading to potential deadlock when reducing shared file records
  for MPI applications (known to affect mvapich2)
* fixed bug preventing usage of Darshan's non-MPI mode in builds that use
  MPI compilers
* boosted Darshan's default internal memory allocation from 2 MiB to 4 MiB
* added wrappers for openat, preadv, preadv2, pwritev, and pwritev2 (improves
  profiling of ompio)