@@ -66,8 +66,8 @@ typedef struct hash_entry_s
     int64_t type;
     int64_t procs;
     void *rec_dat;
-    double cumul_io_total_time; /* cumulative metadata and io time */
-    double slowest_io_total_time; /* slowest rank metadata and io time */
+    double cumul_io_total_time; /* cumulative metadata and rw time */
+    double slowest_io_total_time; /* slowest rank metadata and rw time */
 } hash_entry_t;
 
 /* Structure to accumulate aggregate derived metrics across all files.  This
@@ -106,14 +106,14 @@ typedef struct perf_data_s
 {
     int64_t total_bytes;
     double slowest_rank_io_total_time;
-    double slowest_rank_io_only_time;
+    double slowest_rank_rw_only_time;
     double slowest_rank_meta_only_time;
     int slowest_rank_rank;
     double shared_io_total_time_by_slowest;
     double agg_perf_by_slowest;
     double agg_time_by_slowest;
     double *rank_cumul_io_total_time;
-    double *rank_cumul_io_only_time;
+    double *rank_cumul_rw_only_time;
     double *rank_cumul_md_only_time;
 } perf_data_t;
 
@@ -388,10 +388,10 @@ int main(int argc, char **argv)
     }
 
     pdata.rank_cumul_io_total_time = malloc(sizeof(double)*job.nprocs);
-    pdata.rank_cumul_io_only_time = malloc(sizeof(double)*job.nprocs);
+    pdata.rank_cumul_rw_only_time = malloc(sizeof(double)*job.nprocs);
     pdata.rank_cumul_md_only_time = malloc(sizeof(double)*job.nprocs);
     if (!pdata.rank_cumul_io_total_time || !pdata.rank_cumul_md_only_time ||
-        !pdata.rank_cumul_io_only_time)
+        !pdata.rank_cumul_rw_only_time)
     {
         darshan_log_close(fd);
         return(-1);
@@ -399,7 +399,7 @@ int main(int argc, char **argv)
     else
     {
         memset(pdata.rank_cumul_io_total_time, 0, sizeof(double)*job.nprocs);
-        memset(pdata.rank_cumul_io_only_time, 0, sizeof(double)*job.nprocs);
+        memset(pdata.rank_cumul_rw_only_time, 0, sizeof(double)*job.nprocs);
         memset(pdata.rank_cumul_md_only_time, 0, sizeof(double)*job.nprocs);
     }
 
@@ -412,7 +412,7 @@ int main(int argc, char **argv)
     for(i=0; i<DARSHAN_MAX_MODS; i++)
     {
         struct darshan_base_record *base_rec;
-        void *save_io_total, *save_md_only, *save_io_only;
+        void *save_io_total, *save_md_only, *save_rw_only;
 
         /* check each module for any data */
         if(fd->mod_map[i].len == 0)
@@ -700,17 +700,17 @@ int main(int argc, char **argv)
             printf("# ...........................\n");
             printf("# unique files: slowest_rank_io_time: %lf\n", pdata.slowest_rank_io_total_time);
             printf("# unique files: slowest_rank_meta_only_time: %lf\n", pdata.slowest_rank_meta_only_time);
-            printf("# unique files: slowest_rank_io_only_time: %lf\n", pdata.slowest_rank_io_only_time);
+            printf("# unique files: slowest_rank_rw_only_time: %lf\n", pdata.slowest_rank_rw_only_time);
             printf("# unique files: slowest_rank: %d\n", pdata.slowest_rank_rank);
             printf("#\n");
             printf("# I/O timing for shared files (seconds):\n");
             printf("# ...........................\n");
             printf("# shared files: time_by_slowest: %lf\n", pdata.shared_io_total_time_by_slowest);
             printf("#\n");
-            printf("# Aggregate performance, including both shared and unique files (MiB/s):\n");
+            printf("# Aggregate performance, including both shared and unique files:\n");
             printf("# ...........................\n");
-            printf("# agg_time_by_slowest: %lf\n", pdata.agg_time_by_slowest);
-            printf("# agg_perf_by_slowest: %lf\n", pdata.agg_perf_by_slowest);
+            printf("# agg_time_by_slowest: %lf # seconds\n", pdata.agg_time_by_slowest);
+            printf("# agg_perf_by_slowest: %lf # MiB/s\n", pdata.agg_perf_by_slowest);
         }
 
         if((mask & OPTION_FILE_LIST) || (mask & OPTION_FILE_LIST_DETAILED))
@@ -743,15 +743,15 @@ int main(int argc, char **argv)
         memset(&total, 0, sizeof(total));
         memset(&fdata, 0, sizeof(fdata));
         save_io_total = pdata.rank_cumul_io_total_time;
-        save_io_only = pdata.rank_cumul_io_only_time;
+        save_rw_only = pdata.rank_cumul_rw_only_time;
         save_md_only = pdata.rank_cumul_md_only_time;
         memset(&pdata, 0, sizeof(pdata));
         memset(save_io_total, 0, sizeof(double)*job.nprocs);
-        memset(save_io_only, 0, sizeof(double)*job.nprocs);
+        memset(save_rw_only, 0, sizeof(double)*job.nprocs);
         memset(save_md_only, 0, sizeof(double)*job.nprocs);
         pdata.rank_cumul_io_total_time = save_io_total;
         pdata.rank_cumul_md_only_time = save_md_only;
-        pdata.rank_cumul_io_only_time = save_io_only;
+        pdata.rank_cumul_rw_only_time = save_rw_only;
 
         HASH_ITER(hlink, file_hash_table, curr, tmp_file)
         {
@@ -768,7 +768,7 @@ cleanup:
     darshan_log_close(fd);
     free(pdata.rank_cumul_io_total_time);
     free(pdata.rank_cumul_md_only_time);
-    free(pdata.rank_cumul_io_only_time);
+    free(pdata.rank_cumul_rw_only_time);
     free(mod_buf);
 
     /* free record hash data */
@@ -992,7 +992,7 @@ void stdio_accum_perf(struct darshan_stdio_file *pfile,
             pfile->fcounters[STDIO_F_WRITE_TIME]);
         pdata->rank_cumul_md_only_time[pfile->base_rec.rank] +=
             pfile->fcounters[STDIO_F_META_TIME];
-        pdata->rank_cumul_io_only_time[pfile->base_rec.rank] +=
+        pdata->rank_cumul_rw_only_time[pfile->base_rec.rank] +=
             pfile->fcounters[STDIO_F_READ_TIME] +
             pfile->fcounters[STDIO_F_WRITE_TIME];
     }
@@ -1031,7 +1031,7 @@ void posix_accum_perf(struct darshan_posix_file *pfile,
             pfile->fcounters[POSIX_F_WRITE_TIME]);
         pdata->rank_cumul_md_only_time[pfile->base_rec.rank] +=
             pfile->fcounters[POSIX_F_META_TIME];
-        pdata->rank_cumul_io_only_time[pfile->base_rec.rank] +=
+        pdata->rank_cumul_rw_only_time[pfile->base_rec.rank] +=
             pfile->fcounters[POSIX_F_READ_TIME] +
             pfile->fcounters[POSIX_F_WRITE_TIME];
     }
@@ -1069,7 +1069,7 @@ void mpiio_accum_perf(struct darshan_mpiio_file *mfile,
             mfile->fcounters[MPIIO_F_WRITE_TIME]);
         pdata->rank_cumul_md_only_time[mfile->base_rec.rank] +=
             mfile->fcounters[MPIIO_F_META_TIME];
-        pdata->rank_cumul_io_only_time[mfile->base_rec.rank] +=
+        pdata->rank_cumul_rw_only_time[mfile->base_rec.rank] +=
             mfile->fcounters[MPIIO_F_READ_TIME] +
             mfile->fcounters[MPIIO_F_WRITE_TIME];
     }
@@ -1296,7 +1296,7 @@ void calc_perf(perf_data_t *pdata,
         {
             pdata->slowest_rank_io_total_time = pdata->rank_cumul_io_total_time[i];
             pdata->slowest_rank_meta_only_time = pdata->rank_cumul_md_only_time[i];
-            pdata->slowest_rank_io_only_time = pdata->rank_cumul_io_only_time[i];
+            pdata->slowest_rank_rw_only_time = pdata->rank_cumul_rw_only_time[i];
             pdata->slowest_rank_rank = i;
         }
     }
